# blur

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  mise.toml  vcpkg-configuration.json  vcpkg.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md  issue.md
.github/workflows/: build.yaml  notify.yaml  stale-issues.yaml
ci/: .gitignore  build-appimage.sh  build-dependencies-linux.sh  build-dependencies-macos.sh  build-dependencies-windows.ps1  run-clangd-tidy.py
installer/: setup.iss
installer/dependencies/lib/: benchmark_rife_gpus.py  get_rife_gpus.py
resources/: blur.desktop
src/: Info.plist
src/cli/: cli.cpp  cli.h  cli_pch.h  main.cpp
src/common/: blur.cpp  blur.h  common_pch.h  config.cpp  config.h  config_app.cpp  config_app.h  config_base.cpp  config_base.h  config_blur.cpp  config_blur.h  config_presets.cpp  config_presets.h  rendering.cpp  rendering.h  rendering_frame.cpp  rendering_frame.h  updates.cpp  updates.h  utils.cpp  utils.h  weighting.cpp  weighting.h
src/gui/: desktop_notification.cpp  desktop_notification.h  desktop_notification_mac.mm  drag_handler.cpp  event_handler.cpp  gui.cpp  gui.h  gui_pch.h  gui_utils.cpp  gui_utils.h  main.cpp  renderer.cpp  renderer.h  sdl.cpp  sdl.h  tasks.cpp  tasks.h  window_manager.cpp
src/gui/components/: main.cpp  main.h  notifications.cpp  notifications.h
src/gui/components/configs/: configs.cpp  configs.h  option_information.cpp  options.cpp  preview.cpp
src/gui/fonts/: dejavu_sans.h  eb_garamond.h  icons.h
src/gui/os/: desktop_notification.cpp  desktop_notification.h  desktop_notification_mac.mm
src/gui/render/: imconfig.h  render.cpp  render.h
src/gui/render/font/: font.cpp  font.h
src/gui/render/primitives/: color.cpp  color.h  point.h  primitives_impl.h  rect.cpp  rect.h  size.h
src/gui/ui/: keys.cpp  keys.h  render.cpp  ui.cpp  ui.h  utils.cpp
src/gui/ui/elements/: bar.cpp  button.cpp  checkbox.cpp  dropdown.cpp  hint.cpp  image.cpp  notification.cpp  separator.cpp  slider.cpp  tabs.cpp  text.cpp  text_input.cpp  video.cpp  video_track.cpp  videos.cpp  weighting_graph.cpp
src/gui/ui/helpers/: input.cpp  input.h  text_input.cpp  text_input.h  video.cpp  video.h
src/vapoursynth/: benchmark_rife_gpus.py  blur.py  get_rife_gpus.py
src/vapoursynth/blur/: adjust.py  blending.py  deduplicate.py  deduplicate_rife.py  interpolate.py  utils.py  weighting.py
tests/cli/: cli_test_pch.cpp  cli_test_pch.h  cli_tests.cpp
tests/plot_weighting_functions/: README.md  plot_weighting_functions.py  pyproject.toml
